feat: complete Analytics Engine removal (Phase 4)
Phase 4 of Analytics Engine to D1 migration:
- Remove Analytics Engine binding from wrangler.jsonc
- Remove dual-write logic from all metric functions (writeValidationMetric, writeTrainingMetric, writeABTestMetric, writeAdminMetric)
- Clean up obsolete Analytics Engine code (getRiskBucket, DashboardQueries)
- Update all function signatures to remove analytics parameter
- Update call sites in fraud-detection.ts and tests
- Regenerate TypeScript types (wrangler types)
- Security: SQL injection vulnerability fixed in Phase 3 (whitelist approach)

System now writes exclusively to D1 database.
Deployment verified: 5 validation records successfully written to D1.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -44,15 +44,6 @@
 		},
 	],
 	/**
-	 * Analytics Engine
-	 * https://developers.cloudflare.com/analytics/analytics-engine/
-	 */
-	"analytics_engine_datasets": [
-		{
-			"binding": "ANALYTICS"
-		}
-	],
-	/**
 	 * Cron Triggers
 	 * Every 6 hours:
 	 * 1. Update disposable domain list from external sources (GitHub)
@@ -74,7 +65,7 @@
 	},
 	/**
 	 * D1 Database - SQLite database with full SQL support
-	 * This will replace Analytics Engine after migration
+	 * Stores all validation, training, A/B test, and admin metrics
 	 * https://developers.cloudflare.com/d1/
 	 */
 	"d1_databases": [
